--- a/src/app/pages/vocab-details/vocab-details.page.html
+++ b/src/app/pages/vocab-details/vocab-details.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
-    <ion-title>Details</ion-title>
+    <ion-title>ADD / EDIT</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -19,6 +19,7 @@
           <ion-select-option value="phrase">phrase</ion-select-option>
           <ion-select-option value="idiom">idiom</ion-select-option>
           <ion-select-option value="expression">expression</ion-select-option>
+          <ion-select-option value="sentence">sentence</ion-select-option>
           <ion-select-option value="others">others</ion-select-option>
         </ion-select>
     </ion-item>
@@ -26,7 +27,7 @@
       <ion-input type="text" placeholder="subcategory" [(ngModel)]="vocab.subcategory"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-textarea rows="5" cols="20" placeholder="notes here..." [(ngModel)]="vocab.notes"></ion-textarea>
+      <ion-textarea rows="20" cols="20" placeholder="notes here..." [(ngModel)]="vocab.notes"></ion-textarea>
     </ion-item>  
   </ion-list>
   <ion-button expand="full" (click)="saveVocab()">Save</ion-button>
