--- a/src/app/pages/vocab-listing/vocab-listing.page.html
+++ b/src/app/pages/vocab-listing/vocab-listing.page.html
@@ -4,6 +4,21 @@
       <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
     <ion-title>{{ category | uppercase }}</ion-title>
+
+    <ion-buttons slot="end">
+      <ion-button (click)="getDataByAZ()">
+        <!-- <ion-icon slot="icon-only" name="arrow-round-down"></ion-icon> -->
+        a-z
+        <!-- <ion-icon slot="icon-only" name="arrow-down"></ion-icon> -->
+      </ion-button>
+      |
+      <ion-button (click)="getDataByTime()">
+        time
+        <!-- <ion-icon slot="icon-only" name="arrow-round-down"></ion-icon> -->
+        <!-- <ion-icon slot="icon-only" name="arrow-round-up"></ion-icon> -->
+      </ion-button>
+    </ion-buttons>
+
   </ion-toolbar>
 </ion-header>
 
