--- a/src/app/pages/vocab-listing/vocab-listing.page.html
+++ b/src/app/pages/vocab-listing/vocab-listing.page.html
@@ -6,13 +6,13 @@
     <ion-title>{{ category | uppercase }}</ion-title>
 
     <ion-buttons slot="end">
-      <ion-button (click)="getDataByAZ()">
+      <ion-button color="secondary" (click)="getDataByAZ()">
         <!-- <ion-icon slot="icon-only" name="arrow-round-down"></ion-icon> -->
         a-z
         <!-- <ion-icon slot="icon-only" name="arrow-down"></ion-icon> -->
       </ion-button>
       |
-      <ion-button (click)="getDataByTime()">
+      <ion-button color="secondary" (click)="getDataByTime()">
         time
         <!-- <ion-icon slot="icon-only" name="arrow-round-down"></ion-icon> -->
         <!-- <ion-icon slot="icon-only" name="arrow-round-up"></ion-icon> -->
