--- a/src/app/pages/flipcard/flipcard.page.html
+++ b/src/app/pages/flipcard/flipcard.page.html
@@ -7,7 +7,7 @@
 
     <ion-buttons slot="end">
       <ion-button (click)="getRandomItems()">
-        <ion-icon slot="icon-only" name="shuffle"></ion-icon>
+        <ion-icon slot="icon-only" name="refresh"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -20,13 +20,15 @@
     <ion-list-header>
       <ion-label>Guess the meaning before you flip </ion-label>
     </ion-list-header>
-    <ion-item-sliding *ngFor="let item of rndVocabs; let i = index" #slidingItem>
-      <ion-item lines="inset" button [routerLink]="['/view', item.id]">
-        <ion-label>
-          <h1>{{ item.vocab }}</h1>
-          <!-- <p>(t) {{ item.category }} - (m) {{ item.notes }}</p> -->
-        </ion-label>
-      </ion-item>
-    </ion-item-sliding>
+    <ng-container *ngIf="rndVocabs">
+      <ion-item-sliding *ngFor="let item of rndVocabs; let i = index" #slidingItem>
+        <ion-item lines="inset" button [routerLink]="['/view', item.id]">
+          <ion-label>
+            <h1>{{ item.vocab }}<br/></h1>
+            <!-- <p>(t) {{ item.category }} - (m) {{ item.notes }}</p> -->
+          </ion-label>
+        </ion-item>
+      </ion-item-sliding>
+    </ng-container>
   </ion-list>
 </ion-content>
