--- a/src/app/pages/flipcard/flipcard.page.html
+++ b/src/app/pages/flipcard/flipcard.page.html
@@ -1,15 +1,15 @@
 <ion-header>
-  <ion-toolbar color="secondary">
+  <ion-toolbar color="tertiary">
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
     <ion-title> FLIPCARD </ion-title>
 
-    <ion-buttons slot="end">
+    <!-- <ion-buttons slot="end">
       <ion-button (click)="getRandomItems()">
         <ion-icon slot="icon-only" name="refresh"></ion-icon>
       </ion-button>
-    </ion-buttons>
+    </ion-buttons> -->
   </ion-toolbar>
 </ion-header>
 
@@ -31,4 +31,12 @@
       </ion-item-sliding>
     </ng-container>
   </ion-list>
+  <br/>
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button (click)="getRandomItems()" color="tertiary">
+      <ion-icon name="refresh"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
 </ion-content>
