--- a/src/app/pages/vocab-view/vocab-view.page.scss
+++ b/src/app/pages/vocab-view/vocab-view.page.scss
@@ -1,3 +1,15 @@
 p {
     white-space: pre-line;
 }
+
+.card-content {
+    white-space: pre-line;
+}
+
+ion-card, .card-ios, .card-md {
+    margin: 0px;
+}
+
+hr {
+    border-bottom: 1px solid silver;
+}
