--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,12 +12,43 @@
     <ion-list-header>
       <ion-label>CATEGORIES</ion-label>
     </ion-list-header>
-    <ion-item-sliding *ngFor="let category of categories">
-      <ion-item lines="inset" button [routerLink]="['/listing', category]">
+    <ion-item-sliding>
+      <ion-item lines="inset" button [routerLink]="['/listing', 'vocabulary', 'ALL']">
+        <ion-label color="primary">
+          VOCABULARY
+        </ion-label>
+      </ion-item>
+      <ion-item lines="inset" button [routerLink]="['/listing', 'phrase', 'ALL']">
+        <ion-label color="primary">
+          PHRASES
+        </ion-label>
+      </ion-item>
+      <ion-item lines="inset" button [routerLink]="['/listing', 'idiom', 'ALL']">
+        <ion-label color="primary">
+          IDIOMS
+        </ion-label>
+      </ion-item>
+      <ion-item lines="inset" button [routerLink]="['/subcat-listing', 'expression']">
+        <ion-label color="primary">
+          EXPRESSIONS
+        </ion-label>
+      </ion-item>
+      <ion-item lines="inset" button [routerLink]="['/listing', 'sentence', 'ALL']">
+        <ion-label color="primary">
+          SENTENCES
+        </ion-label>
+      </ion-item>
+      <ion-item lines="inset" button [routerLink]="['/listing', 'others', 'ALL']">
+        <ion-label color="primary">
+          OTHERS
+        </ion-label>
+      </ion-item>
+
+      <!-- <ion-item lines="inset" button [routerLink]="['/listing', category, '']">
         <ion-label color="primary">
           {{ category | uppercase }}
         </ion-label>
-      </ion-item>
+      </ion-item> -->
     </ion-item-sliding>
   </ion-list>
 
@@ -25,8 +56,10 @@
       <ion-list-header>
         <ion-label>GAMES</ion-label>
       </ion-list-header>
-      <ion-button class="marginL15" color="tertiary" [routerLink]="['/flipcard']">FLIPCARD</ion-button>
-      <ion-button class="marginL15" color="secondary" [routerLink]="['/randompick']">RANDOM PICK</ion-button>
+      <ion-button class="marginL15" color="tertiary" [routerLink]="['/flipcard']">FLIPCARD</ion-button> 
+      <ion-button class="marginL15" color="secondary" [routerLink]="['/randompick']">PICK ANY</ion-button> 
+      <br/><br/>
+      <ion-button class="marginL15" color="success" [routerLink]="['/getexpressions']">RANDOM EXPRESSIONS</ion-button>
 
       <!-- <ion-item-sliding>
         <ion-item lines="inset" button [routerLink]="['/flipcard']">
