--- a/src/app/pages/vocab-listing/vocab-listing.page.html
+++ b/src/app/pages/vocab-listing/vocab-listing.page.html
@@ -3,7 +3,10 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
-    <ion-title>{{ category | uppercase }} ({{ vocabs.length }})</ion-title>
+    <ion-title>
+      {{ category | uppercase }} ({{ vocabs.length }})
+
+    </ion-title>
 
     <ion-buttons slot="end">
       <ion-button color="secondary" (click)="getDataByAZ()">
@@ -23,6 +26,16 @@
 </ion-header>
 
 <ion-content>
+
+  <ng-container *ngIf="subcategory != '' && subcategory != 'ALL'">
+    <ion-text color="primary">
+      <p class="margin15">
+          {{ subcategory }}
+      </p>
+      
+    </ion-text>  
+  </ng-container>
+
   <ion-list>
     <ng-container *ngIf="!vocabs || vocabs.length == 0">
       <div *ngFor="let n of [0,1,2]" padding>
